CHORE: landing page thingy ⚙️

--- a/landing/src/index.css
+++ b/landing/src/index.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: "Comfortaa";
+    src: url("/fonts/Comfortaa-Bold.ttf");
+    font-weight: 700;
+  }
+  @font-face {
+    font-family: "Comfortaa";
+    src: url("/fonts/Comfortaa-SemiBold.ttf");
+    font-weight: 600;
+  }
+  @font-face {
+    font-family: "Comfortaa";
+    src: url("/fonts/Comfortaa-Medium.ttf");
+    font-weight: 500;
+  }
+  @font-face {
+    font-family: "Comfortaa";
+    src: url("/fonts/Comfortaa-Regular.ttf");
+    font-weight: 400;
+  }
+  @font-face {
+    font-family: "Comfortaa";
+    src: url("/fonts/Comfortaa-Light.ttf");
+    font-weight: 300;
+  }
+}
