--- a/landing/src/index.css
+++ b/landing/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @layer base {
+  /* Comfortaa */
   @font-face {
     font-family: "Comfortaa";
     src: url("/fonts/Comfortaa-Bold.ttf");
@@ -27,5 +28,47 @@
     font-family: "Comfortaa";
     src: url("/fonts/Comfortaa-Light.ttf");
     font-weight: 300;
+  }
+  /* IBMPlexSans */
+  @font-face {
+    font-family: "IBM Plex Sans", sans-serif;
+    src: url("/fonts/IBMPlexSans-Bold.ttf");
+    font-weight: 700;
+  }
+
+  @font-face {
+    font-family: "IBM Plex Sans", sans-serif;
+    src: url("/fonts/IBMPlexSans-SemiBold.ttf");
+    font-weight: 600;
+  }
+
+  @font-face {
+    font-family: "IBM Plex Sans", sans-serif;
+    src: url("/fonts/IBMPlexSans-Medium.ttf");
+    font-weight: 500;
+  }
+
+  @font-face {
+    font-family: "IBM Plex Sans", sans-serif;
+    src: url("/fonts/IBMPlexSans-Regular.ttf");
+    font-weight: 400;
+  }
+
+  @font-face {
+    font-family: "IBM Plex Sans", sans-serif;
+    src: url("/fonts/IBMPlexSans-Light.ttf");
+    font-weight: 300;
+  }
+
+  @font-face {
+    font-family: "IBM Plex Sans", sans-serif;
+    src: url("/fonts/IBMPlexSans-ExtraLight.ttf");
+    font-weight: 200;
+  }
+
+  @font-face {
+    font-family: "IBM Plex Sans", sans-serif;
+    src: url("/fonts/IBMPlexSans-Thin.ttf");
+    font-weight: 100;
   }
 }
